:bug: Fix dot markers still visible when rows are folded
Fixes #104

--- a/styles/pigments.less
+++ b/styles/pigments.less
@@ -90,6 +90,11 @@ pigments-color-marker {
     .region.background {
       display: none;
     }
+
+  }
+
+  &.in-fold {
+    display: none;
   }
 
   .region {
